Added a new post and did some housekeeping works

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "youngjae-lim.github.io",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "My Portfolio Website Built By Gatsby",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -44,9 +44,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/youngjae-lim/youngjae-lim.github.io"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/youngjae-lim/youngjae-lim.github.io/issues"
   }
 }
