--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prism-react-renderer": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "remark-math": "^3.0.1",
     "remark-slug": "^6.0.0",
