--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 0"
   },
   "dependencies": {
+    "@fontsource/fira-mono": "^4.5.4",
+    "@fontsource/gowun-dodum": "^4.5.4",
     "@fontsource/merriweather": "^4.5.6",
     "@fontsource/montserrat": "^4.5.5",
+    "@fontsource/overpass": "^4.5.4",
     "@matejmazur/react-katex": "^3.1.3",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
