--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
     "katex": "^0.13.13",
+    "parse-numeric-range": "^1.3.0",
     "postcss": "^8.4.12",
     "prism-react-renderer": "^1.2.0",
     "react": "^17.0.1",
