--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "parse-numeric-range": "^1.3.0",
     "postcss": "^8.4.12",
     "prism-react-renderer": "^1.2.0",
+    "prismjs": "^1.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
