--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-share": "^4.4.0",
     "remark-math": "^3.0.1",
     "remark-slug": "^6.0.0",
     "styled-components": "^5.2.3"
