--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "gatsby-image": "^3.3.0",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-mdx": "^2.3.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
+    "gatsby-plugin-react-social-cards": "^1.0.0",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-styled-components": "^4.3.0",
     "gatsby-remark-images": "^5.0.0",
