Added autolinks on heading h1, h2, h3, h4

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-react-social-cards": "^1.0.0",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-styled-components": "^4.3.0",
+    "gatsby-remark-autolink-headers": "^3.0.0",
     "gatsby-remark-images": "^5.0.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
